# AI-Engineering

02_Embeddings_and_RAG/: pyproject.toml
19_Testing/: Dockerfile  Makefile  app.py  docker-compose.yml  main.py  pyproject.toml  template.py
19_Testing/apps/api/: pyproject.toml  template.py
19_Testing/apps/api/src/api/: app.py
19_Testing/apps/api/src/api/config/: configuration.py
19_Testing/apps/chatbot-ui/: pyproject.toml
19_Testing/notebooks/prereqsites/: 01-llm-apis.ipynb
19_Testing/src/testing_ai_project/config/: configuration.py
20_Data_Preprocessing_Embeddings/: .gitignore  template.py
20_Data_Preprocessing_Embeddings/data/: Data_No_details.jsonl  Data_With_Details.jsonl  data.jsonl
20_Data_Preprocessing_Embeddings/research/: 01_Explore_Amazon_Reviews_Data.ipynb
20_RAG_Pipeline/: pyproject.toml  template.py
20_RAG_Pipeline/research/: 01_Explore_Amazon_Reviews_data.ipynb  02_Rag_preprocessing_Amazon.ipynb
21_Rag_Qdrant_Pipeline/: .gitignore  Makefile  docker-compose.yml  pyproject.toml
21_Rag_Qdrant_Pipeline/apps/api/: pyproject.toml
21_Rag_Qdrant_Pipeline/data/: Data_No_details.jsonl  Data_With_Details_After_2025.jsonl  data.jsonl
21_Rag_Qdrant_Pipeline/notebooks/week_2/: 01_Structured_Outputs_Intro.ipynb  02_Structured_Outputs_Rag_Pipeline.ipynb
21_Rag_Qdrant_Pipeline/qdrant_storage/: raft_state.json
22_Rag_Qdrant_Hybrid_Search_Pipeline/: Makefile  env.example  pyproject.toml
22_Rag_Qdrant_Hybrid_Search_Pipeline/notebooks/week_2/: 02_Structured_Outputs_Rag_Pipeline.ipynb
23_Rag_Hybrid_Re_Rank/: .gitignore  pyproject.toml
23_Rag_Hybrid_Re_Rank/notebooks/week_2/: 01_Structured_Outputs_Intro.ipynb  03_Hybrid_Search.ipynb  04_Re_Rank.ipynb  05_Prompt_Versioning.ipynb
24_Langgraph/: LICENSE  env.example
24_Langgraph/apps/api/: pyproject.toml
24_Langgraph/notebooks/week_3/: 01_Langgraph_Intro.ipynb  02_Query_Rewriting.ipynb  03_Router.ipynb  04_Agent_Single_Turn.ipynb  readme.md  utils.py
template-app/Notes/: Setting up your development environment..html
template-app/Notes/Sprint 0 – Problem Framing, Infrastructure Setup & RAG Foundations/: 002 Tooling overview (LangGraph, vector DBs, LLM APIs, etc.).html  003 What is RAG.html  004 Embedding models & vector DB integration.html  005 Implementing basic observability foundations.html  006 Evaluating basic end-to-end retrieval and generation.html  008 Amazon Electronics Category Dataset Overview.html  009 [OPTIONAL] AI Project Canvas.html
template-app/Notes/Sprint 1 – Retrieval Quality & Context Engineering/: 002 Pydantic and structured outputs.html  004 Context Engineering and prompt management.html  005 Re-Ranking and Hybrid Retrieval for better relevance.html  006 (Optional) Automated prompt tuning.html
(+65 files in other folders)
